@@ -1,3 +1,9 @@
+2004-06-06  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/olympus/exif-mnote-data-olympus.c: More documentation,
+	  additional case (Nikon, 02 0a 00).
+	* Makefile.am: s/LIBMNOTE/LIBEXIF
+
 2004-05-27  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* configure.in: 0.6.10 as 0.6.9 has just been released.
